[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "heagan"
version = "0.0.1"
authors = [
    { name="Arindam Debnath", email="debnath@psu.edu" },
    { name="Adam Krajewski", email="ak@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "High-Entropy Alloy conditionalGAN demonstrator package"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2023.2.22",
    "torch>=1.11.0",
    "onnx2torch>=1.5.2",
    "onnx>=1.13.0",
    "numpy>=1.22.0",
    #"tqdm>=4.65.0",
    #"pymongo>=4.2",
    #"dnspython",
    #"pyqalloy",
    #'pysipfenn",
    "pandas",
    "scikit-learn"
]

[project.urls]
"Homepage" = "https://ulter.org"
#"Bug Tracker" = "https://github.com/amkrajewski/pqam-dparamhu2021/issues"